    &#8226; Compose button can now float over the main timelines instead of being in the action bar<br/>
    &#8226; New Discover tab in the drawer for trends, suggested users, and nearby tweets<br/>
    &#8226; Animations for opening new pages and windows<br/>
    &#8226; Post tweets from different accounts in the compose window<br/>
    &#8226; Notifications button in the action bar<br/>
    &#8226; Mute expressions and keywords on tweets<br/>
    &#8226; View up to 100 retweeters of a status (API limit)<br/>
    &#8226; View users mentions and favorites on their profiles<br/>
    &#8226; Favorite user tweet notifications will now open directly to the tweet<br/>
    &#8226; Added option to manually select location for local trends<br/>
    &#8226; Saved Searches drawer item<br/>
    &#8226; Save and destroy saved searches<br/>
    &#8226; Added picture filter to searches<br/>
    &#8226; Added retweet filter to searches<br/>
    &#8226; Auto-complete users from the tweet reply<br/>
    &#8226; RTL support for Android 4.2 and above<br/>
    &#8226; Themers can now theme the action bar<br/>
    &#8226; Themers can now change the background for the windows<br/>
    &#8226; Live streaming should now preform a background refresh to avoid missing tweets if your data connection changes<br/>
    &#8226; Better organization of settings<br/>
    &#8226; Some support for ow.ly images in-line<br/>
    &#8226; Option to automatically open the keyboard when you open the tweet viewer<br/>
<br/>

<b>IMPROVED:</b><br/>
    &#8226; Layout and sizing optimizations for Talon layout<br/>
    &#8226; Super smooth scrolling optimizations<br/>
    &#8226; Higher quality profile pictures<br/>
    &#8226; Management of Talon Pull and keeping it active<br/>
    &#8226; Remade the tweet viewer layout<br/>
    &#8226; Much better image sizing on tweet viewer<br/>
    &#8226; Photo viewer tweeks<br/>
    &#8226; New time format on tweets for better sizing<br/>