@@ -3,6 +3,7 @@ package com.klinker.android.twitter.adapters;
 import android.app.SearchManager;
 import android.content.Context;
 import android.content.Intent;
+import android.os.Handler;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
@@ -10,15 +11,17 @@ import android.widget.ArrayAdapter;
 import android.widget.TextView;
 
 import com.klinker.android.twitter.R;
+import com.klinker.android.twitter.manipulations.PhotoViewerDialog;
+import com.klinker.android.twitter.manipulations.widgets.NetworkedCacheableImageView;
 import com.klinker.android.twitter.settings.AppSettings;
 import com.klinker.android.twitter.ui.drawer_activities.discover.trends.SearchedTrendsActivity;
 
 import java.util.ArrayList;
 
 import twitter4j.User;
+import uk.co.senab.bitmapcache.CacheableBitmapDrawable;
 
-
-public class TrendsArrayAdapter extends ArrayAdapter<User> {
+public class PicturesArrayAdapter extends ArrayAdapter<String> {
 
     protected Context context;
 
@@ -27,12 +30,15 @@ public class TrendsArrayAdapter extends ArrayAdapter<User> {
     private LayoutInflater inflater;
     private AppSettings settings;
 
+    private Handler handler;
+
     public static class ViewHolder {
-        public TextView text;
+        public NetworkedCacheableImageView iv;
+        public String url;
     }
 
-    public TrendsArrayAdapter(Context context, ArrayList<String> text) {
-        super(context, R.layout.tweet);
+    public PicturesArrayAdapter(Context context, ArrayList<String> text) {
+        super(context, R.layout.picture);
 
         this.context = context;
         this.text = text;
@@ -40,6 +46,7 @@ public class TrendsArrayAdapter extends ArrayAdapter<User> {
         settings = AppSettings.getInstance(context);
         inflater = LayoutInflater.from(context);
 
+        handler = new Handler();
     }
 
     @Override
@@ -55,31 +62,32 @@ public class TrendsArrayAdapter extends ArrayAdapter<User> {
         View v;
         final ViewHolder holder;
 
-        v = inflater.inflate(R.layout.text, viewGroup, false);
+        v = inflater.inflate(R.layout.picture, viewGroup, false);
 
         holder = new ViewHolder();
 
-        holder.text = (TextView) v.findViewById(R.id.text);
-
-        // sets up the font sizes
-        holder.text.setTextSize(24);
+        holder.iv = (NetworkedCacheableImageView) v.findViewById(R.id.picture);
 
         v.setTag(holder);
         return v;
     }
 
-    public void bindView(final View view, Context mContext, final String trend) {
+    public void bindView(final View view, Context mContext, final String url) {
         final ViewHolder holder = (ViewHolder) view.getTag();
 
-        holder.text.setText(trend);
+        holder.url = url;
 
-        holder.text.setOnClickListener(new View.OnClickListener() {
+        holder.iv.loadImage(url, false, new NetworkedCacheableImageView.OnImageLoadedListener() {
+            @Override
+            public void onImageLoaded(CacheableBitmapDrawable result) {
+                holder.iv.setBackgroundDrawable(null);
+            }
+        });
+
+        holder.iv.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
-                Intent search = new Intent(context, SearchedTrendsActivity.class);
-                search.setAction(Intent.ACTION_SEARCH);
-                search.putExtra(SearchManager.QUERY, trend);
-                context.startActivity(search);
+                context.startActivity(new Intent(context, PhotoViewerDialog.class).putExtra("url", url));
             }
         });
 
@@ -97,6 +105,13 @@ public class TrendsArrayAdapter extends ArrayAdapter<User> {
             v = convertView;
 
             final ViewHolder holder = (ViewHolder) v.getTag();
+            holder.iv.setImageDrawable(null);
+
+            if (settings.theme == AppSettings.THEME_LIGHT) {
+                holder.iv.setBackgroundResource(R.drawable.rect_border_light);
+            } else {
+                holder.iv.setBackgroundResource(R.drawable.rect_border_dark);
+            }
         }
 
         bindView(v, context, text.get(position));
